# pyCheckwatt

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_UPGRADE.md  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  main.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: linting.yml  publish-to-test-pypi.yml  pull_requests.yml
examples/: example.py  history_inject.py  main.py
pycheckwatt/: __init__.py  const.py
tests/fixtures/: sample_responses.py
tests/unit/: test_auth_and_requests.py  test_checkwatt_manager.py  test_enhanced_auth.py  test_session_management.py
