[tool.poetry]
name = "pycheckwatt"
version = "0.2.0"
description = "Read data from CheckWatts EnergyInBalance WEB API"
authors = ["Marcus Karlsson <macke.karlsson@gmail.com>", "Anders Yderborg <anders.yderborg@gmail.com>", "Daniel Nilsson <danielnilsson79@hotmail.com>"]
license = "MIT License"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["checkwatt", "eib", "battery"]
include = [
    "README.md"
    ]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = "^3.9.1"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
