[tool.poetry]
name = "pycheckwatt"
version = "0.2.10"
description = "Read data from CheckWatts EnergyInBalance WEB API"
authors = ["Marcus Karlsson <macke.karlsson@gmail.com>", "Anders Yderborg <anders.yderborg@gmail.com>", "Daniel Nilsson <danielnilsson79@hotmail.com>"]
license = "MIT License"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["checkwatt", "eib", "battery"]
include = [
    "README.md"
    ]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = "^3.9.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "~=25.1.0"
flake8 = "~=7.3.0"
isort = "~=6.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = [".venv", "venv", "__pycache__", ".git", ".tox", ".mypy_cache", ".pytest_cache"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
